Day3/manifests/nginx-clusterip-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: tektutor
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  type: ClusterIP
status:
  loadBalancer: {}
